src/test/ui/traits/negative-impls/negative-specializes-positive-item.stderr
error[E0119]: conflicting implementations of trait `MyTrait` for type `u32`:
  --> $DIR/negative-specializes-positive-item.rs:11:1
   |
LL | impl<T> MyTrait for T {
   | --------------------- first implementation here
...
LL | impl !MyTrait for u32 { }
   | ^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `u32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
